--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Fancy Slider</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,20 +16,46 @@
 </head>
 
 <body>
-  <div class="container">
+  <!-- navbar  -->
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light">
+    <div class="container">
+      <a id="reload" class="navbar-brand" href="">Fancy Slider</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active px-4" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-4" href="#shoes">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-4" href="#latest">Recipes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-4" href="#subscribe">Blog</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="container top-banner">
     <h4 class="mt-2 text-center">Search Image for create slider</h4>
     <div class="form-inline mt-3 d-flex justify-content-center">
       <div class="input-group col-md-6 mb-2">
-        <input type="text" class="form-control" id="search" placeholder="nature">
+        <input type="text" class="form-control" id="search" placeholder="Search something...">
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
     <!-- spinner  -->
     <div class="d-flex justify-content-center">
       <div id="loading-spinner" class="spinner-border text-success d-none" role="status">
-          <span class="visually-hidden"></span>
+        <span class="visually-hidden"></span>
       </div>
-  </div>
+    </div>
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
