--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
-        <h3 class="head-title text-center">Select image for create slider</h3>
+        <h4 class="head-title text-center">Select <span id="element"></span> images for create slider</h4>
         <div class="input-group col-md-3 mb-2 mb-md-0">
           <input class="form-control" id="duration" placeholder="slider change duration">
         </div>
