back button added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <span class="dot" onclick="changeItem(-1)"></span>
         <span class="dot" onclick="changeItem(1)"></span>
       </div>
+      <button id="back" onclick="backHome()" class="btn btn-outline-primary">Back</button>
     </div>
   </div>
   <!-- Optional JavaScript -->
